--- a/Eashire/modules/dossierRecrutement/views/dossierRecrutementCreatePage.handlebars
+++ b/Eashire/modules/dossierRecrutement/views/dossierRecrutementCreatePage.handlebars
@@ -34,8 +34,8 @@
       <form action={{sendMailLink}} method="post">
       
          <button id="envoyer-mail-button" type="submit"
-            class="flex items-center p-3 text-sm font-bold text-white bg-blue-500 rounded-lg hover:bg-blue-400 group hover:shadow">
-          <span class="ml-2 flex-1 whitespace-nowrap">Envoyer un mail</span>
+            class="flex items-center p-3 text-sm w-fit m-auto font-bold text-white bg-blue-500 rounded-lg hover:bg-blue-400 group hover:shadow">
+          <span class="ml-2 flex-1 whitespace-nowrap">Envoyer le dossier de recrutement</span>
          </button>
       </form>
 
