--- a/Eashire/modules/home/views/home.handlebars
+++ b/Eashire/modules/home/views/home.handlebars
@@ -7,6 +7,9 @@
 			{{#if createdCandidature}}
 				{{>CreatedCandidatureBanner}}
 			{{/if}}
+			{{#if dossierRecrutementSent}}
+				{{>DossierRecrutementSent}}
+			{{/if}}
 			{{#if user}}
 				{{>AuthHome}}
 			{{else}}
