add icon on tab

--- a/Eashire/views/layouts/main.handlebars
+++ b/Eashire/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
 		<link rel='stylesheet' href='/stylesheets/chat.css' />
+		<link rel="icon" href="/images/logo_eashire.png">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script>
 	</head>
 	<body class="h-screen w-screen bg-slate-900 text-slate-300">
