--- a/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
+++ b/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
@@ -3,6 +3,7 @@
 		<meta charset='utf-8' />
 		<title>Eashire</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
+		<link rel="icon" href="/images/logo_eashire.png">
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
 	</head>
 	<body class="h-screen w-screen bg-slate-900 text-slate-300 flex flex-col">
