--- a/Eashire/modules/home/views/components/BaseHome.handlebars
+++ b/Eashire/modules/home/views/components/BaseHome.handlebars
@@ -1,5 +1,5 @@
 <div class="w-fit m-auto mt-4">
-  <h1 class="text-5xl font-semibold">Bienvenue sur Eashire</h1>
+  <h1 class="text-5xl font-semibold">Bienvenue Florence sur Eashire </h1>
 </div>
 <div class="w-fit m-auto mt-16">
   {{>linkButton1 href='/auth/signin' title='Me connecter'}}
