v1 - dark/light theme

--- a/Eashire/modules/dashboard/views/components/DashboardWorkspaceItem.handlebars
+++ b/Eashire/modules/dashboard/views/components/DashboardWorkspaceItem.handlebars
@@ -1,8 +1,8 @@
-<div class="basis-1/3 rounded-md bg-cyan-500 shadow-lg shadow-cyan-500/50 flex flex-col-reverse gap-6 justify-center items-center">
-  <p class="relative md:text-xl md:font-bold">Workspace</p>
-  <a href='/workspace/workspace' class="h-fit">
-    <button class="group relative h-fit p-2 rounded-full bg-cyan-700 drop-shadow-lg shadow-cyan-900">
-      {{> clipboard-document-check-solid class="h-10 w-10 fill-cyan-900 group-hover:h-12 group-hover:w-12"}}
-    </button>
-  </a>
+<div class="basis-1/3 rounded-md bg-sky-300 dark:bg-cyan-500 shadow-lg shadow-sky-500/50 dark:shadow-cyan-500/50 flex flex-col-reverse gap-6 justify-center items-center theme-sensitive">
+    <p class="relative md:text-xl md:font-bold text-sky-900 dark:text-cyan-900">Workspace</p>
+    <a href='/workspace/workspace' class="h-fit">
+        <button class="group relative h-fit p-2 rounded-full bg-sky-200 dark:bg-cyan-700 drop-shadow-lg shadow-sky-800 dark:shadow-cyan-900 theme-sensitive-btn">
+            {{> clipboard-document-check-solid class="h-10 w-10 fill-sky-900 dark:fill-cyan-900 group-hover:h-12 group-hover:w-12"}}
+        </button>
+    </a>
 </div>
