--- a/Eashire/modules/home/views/components/AuthHome.handlebars
+++ b/Eashire/modules/home/views/components/AuthHome.handlebars
@@ -1,7 +1,31 @@
+<button id="themeToggle" class="fixed top-3 right-3 p-2 bg-blue-500 text-white rounded-full shadow hover:bg-blue-600 transition">
+    <i id="themeIcon" class="fas fa-moon"></i>
+</button>
+
 <div class="w-fit m-auto mt-4">
-  <h1 class="text-5xl font-semibold">Bienvenue sur votre page {{user.displayName}}</h1>
+    <h1 class="text-5xl font-semibold">Bienvenue sur votre page {{user.displayName}}</h1>
 </div>
 
 <div class="w-full mt-16">
-  {{>WelcomeMessage}}
+    {{>WelcomeMessage}}
 </div>
+
+<script>
+    document.getElementById('themeToggle').addEventListener('click', () => {
+        const themeIcon = document.getElementById('themeIcon');
+        console.log('test ', document.body.classList)
+        if (document.documentElement.classList.contains('dark')) {
+            console.log('test1')
+            document.documentElement.classList.remove('dark');
+            themeIcon.classList.remove('fa-moon');
+            themeIcon.classList.add('fa-sun');
+            localStorage.setItem('theme', 'white');
+        } else {
+            console.log('test2')
+            document.documentElement.classList.add('dark');
+            themeIcon.classList.remove('fa-sun');
+            themeIcon.classList.add('fa-moon');
+            localStorage.setItem('theme', 'dark');
+        }
+    });
+</script>
