--- a/Eashire/views/components/navbar.handlebars
+++ b/Eashire/views/components/navbar.handlebars
@@ -1,39 +1,50 @@
-<nav class="bg-slate-800 border-gray-200 px-2 sm:px-4 py-2.5">
+<nav class="bg-gray-50 dark:bg-slate-800 px-2 sm:px-4 py-2.5 shadow-md">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
     <a href="/" class="flex items-center">
       <img src="/images/logo_eashire.png" class="mr-8 h-6 sm:h-9" alt="Eashire Logo" />
-      <span class="self-center text-xl font-semibold whitespace-nowrap text-white">Eashire</span>
+      <span class="self-center text-xl font-semibold whitespace-nowrap text-slate-800 dark:text-white">Eashire</span>
     </a>
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0 md:text-sm md:font-medium">
         <li>
-          <a href="/" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400">
-            Home
-          </a>
+            <a href="/"
+               class="{{#if active.home}} text-blue-500 dark:text-blue-400 {{else}} text-gray-500 dark:text-gray-400 {{/if}} block py-2 pr-4 pl-3 dark:hover:bg-gray-800 hover:text-blue-400 md:bg-transparent">
+                Home
+            </a>
         </li>
         <li>
-          <a href="/joblist" class="block py-2 pr-4 pl-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-400">
-            Offre d'emplois
-          </a>
+            <a href="/joblist"
+               class="{{#if active.joblist}} text-blue-500 dark:text-blue-400 {{else}} text-gray-500 dark:text-gray-400 {{/if}} block py-2 pr-4 pl-3 dark:hover:bg-gray-800 dark:hover:text-white hover:text-blue-400 md:bg-transparent">
+                Offre d'emplois
+            </a>
         </li>
         {{#if user}}
           <li>
-            <a href="/calendar" class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Calendrier</a>
+              <a href="/calendar"
+                 class="{{#if active.calendar}} active{{/if}} block py-2 pr-4 pl-3
+          dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-white
+          text-gray-500 hover:text-blue-400 md:bg-transparent">
+                  Calendrier
+              </a>
+
           </li>
           <li>
-            <a href="/dashboard" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">
-              Dashboard
-            </a>
+              <a href="/dashboard"
+                 class="{{#if active.dashboard}} text-blue-500 dark:text-blue-400 {{else}} text-gray-500 dark:text-gray-400 {{/if}} block py-2 pr-4 pl-3 dark:hover:bg-gray-800 dark:hover:text-white hover:text-blue-400 md:bg-transparent">
+                  Dashboard
+              </a>
           </li>
           <li>
-            <a href="/auth/signout" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">
-              Deconnexion
-            </a>
+              <a href="/auth/signout" class="{{#if active.dashboard}} active{{/if}} block py-2 pr-4 pl-3 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-white text-gray-500 hover:text-blue-400 md:bg-transparent">
+                  Deconnexion
+              </a>
           </li>
         {{else}}
           <li>
-            <a href="/auth/signin" class="block py-2 pr-4 pl-3 text-gray-400 border-b border-gray-700 hover:bg-gray-700 md:hover:bg-transparent md:border-0 md:hover:text-white hover:text-white">Connexion</a>
-          </li>   
+              <a href="/auth/signin" class="block py-2 pr-4 pl-3 dark:text-gray-400 dark:hover:bg-gray-800 dark:hover:text-white text-gray-500 hover:text-blue-400 md:bg-transparent">
+                  Connexion
+              </a>
+          </li>
         {{/if}}
       </ul>
     </div>
