--- a/Eashire/views/layouts/main.handlebars
+++ b/Eashire/views/layouts/main.handlebars
@@ -1,4 +1,4 @@
-<html>
+<html class="dark">
 	<head>
 		<meta charset='utf-8' />
 		<title>Eashire</title>
@@ -7,8 +7,9 @@
 		<link rel='stylesheet' href='/stylesheets/chat.css' />
 		<link rel="icon" href="/images/logo_eashire.png">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.0/socket.io.min.js"></script>
-	</head>
-	<body class="h-screen w-screen bg-slate-900 text-slate-300">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    </head>
+    <body class="h-screen w-screen bg-gray-50 dark:bg-slate-900 text-slate-700 dark:text-slate-300">
 		{{#if userId}}
 			{{>chat}}
 		{{/if}}
@@ -45,5 +46,16 @@
 			src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
 			integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
 			crossorigin="anonymous"></script>
+        <script>
+            const themeFromLocalStorage = localStorage.getItem('theme');
+            const savedTheme = (themeFromLocalStorage && themeFromLocalStorage !== "null") ? themeFromLocalStorage : 'dark';
+
+            if(savedTheme === 'dark'){
+                document.documentElement.classList.add(savedTheme)
+            }
+            else{
+                document.documentElement.classList.remove('dark')
+            }
+        </script>
 	</body>
 </html>
