--- a/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
+++ b/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
@@ -1,4 +1,4 @@
-<html>
+<html class="dark">
 	<head>
 		<meta charset='utf-8' />
 		<title>Eashire</title>
@@ -6,7 +6,7 @@
 		<link rel="icon" href="/images/logo_eashire.png">
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
 	</head>
-	<body class="h-screen w-screen bg-slate-900 text-slate-300 flex flex-col">
+	<body class="h-screen w-screen bg-gray-100 dark:bg-slate-900 text-slate-300 flex flex-col">
 		{{>navbar}}
 		<div class="flex flex-grow">
 			<main class="flex-grow flex">
@@ -57,5 +57,17 @@
 				chevronIcon.classList.toggle('rotate-180');
 			});
 		</script>
+        <script>
+            const themeFromLocalStorage = localStorage.getItem('theme');
+            const savedTheme = (themeFromLocalStorage && themeFromLocalStorage !== "null") ? themeFromLocalStorage : 'dark';
+
+            if(savedTheme === 'dark'){
+                document.documentElement.classList.add(savedTheme)
+            }
+            else{
+                document.documentElement.classList.remove('dark')
+            }
+
+        </script>
 	</body>
 </html>
