Calendrier for light mode

--- a/Eashire/views/components/calendarSidebar.handlebars
+++ b/Eashire/views/components/calendarSidebar.handlebars
@@ -3,7 +3,7 @@
     {{>chevron-right-outline}}
   </button>
   <ul class='space-y-2 mx-2'>
-    {{>WorkspaceItem href="/calendar" text='Calendrier' notif_number=(lookup . 'notifNumber') svg='calendar-day-solid'}}
+    {{>WorkspaceItem href="/calendar" text='Calendrier --- 1' notif_number=(lookup . 'notifNumber') svg='calendar-day-solid'}}
 
     {{>WorkspaceItem href="/calendar/myevents" text='Mes évènements' notif_number=(lookup . 'notifNumber') svg='user-solid'}}
 
