--- a/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
+++ b/Eashire/views/layouts/mainCalendarWithSidebar.handlebars
@@ -1,17 +1,16 @@
 <html class="dark">
 	<head>
 		<meta charset='utf-8' />
-		<title>Eashire</title>
+		<title>Eashire----</title>
 		<link rel='stylesheet' href='/stylesheets/style.css' />
 		<link rel="icon" href="/images/logo_eashire.png">
 		<link rel='stylesheet' href='/stylesheets/general_style.css' />
 	</head>
-	<body class="h-screen w-screen bg-gray-100 dark:bg-slate-900 text-slate-300 flex flex-col">
+	<body class="h-screen w-screen bg-gray-100 dark:bg-slate-900 bg-slate-200 text-slate-900 dark:text-slate-300 flex flex-col">
 		{{>navbar}}
 		<div class="flex flex-grow">
 			<main class="flex-grow flex">
 				{{>calendarSidebar}}
-
 				<div class="flex-grow relative">
 					{{#each error}}
 						<div role='alert'>
@@ -67,7 +66,6 @@
             else{
                 document.documentElement.classList.remove('dark')
             }
-
         </script>
 	</body>
 </html>
