--- a/Eashire/modules/dossierRecrutement/views/dossierRecrutementReadPage.handlebars
+++ b/Eashire/modules/dossierRecrutement/views/dossierRecrutementReadPage.handlebars
@@ -30,7 +30,7 @@
   {{#each fichiersRecrutement}}
     {{!-- <div class="block max-w-sm p-6 bg-gray-800 border border-gray-700 rounded-lg shadow"> --}}
     <div class="flex flex-row justify-center">
-      <a href={{this.fileLink}} class='hover:bg-slate-500 rounded-lg p-4'>
+      <a href={{this.fileLink}} class='hover:bg-slate-500 rounded-lg p-4' target="_blank">
 				<div class="flex center-items">
 					<span class="text-2xl font-bold mx-auto">{{this.title}}</span>
 				</div>
